--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,17 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  @keyframes marquee {
+    from {
+      transform: translateX(5%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+  .animate-marquee {
+    animation: marquee 10s linear infinite;
+  }
+}
